# shelfbot.esp32.cam

./: .gitignore  CMakeLists.txt  ENVIRONMENT.md  ESP32_CAM_MICRO-ROS_CONVERSION_PLAN.md  MICROROS.md  README.md  build_script.sh  communication_flow.puml  partitions.csv  sdkconfig
components/camera_control/: CMakeLists.txt
components/camera_control/include/: camera_common.hpp  camera_control.hpp  camera_driver_interface.hpp  camera_manager.hpp  camera_sensor.hpp
components/camera_control/src/: camera_control.cpp  camera_driver.cpp  camera_manager.cpp  camera_sensor.cpp
components/firmware_version/: CMakeLists.txt  firmware_version.cpp
components/firmware_version/include/: firmware_version.hpp
components/http_server/: CMakeLists.txt  controller.cpp  http_server.cpp
components/http_server/include/: controller.hpp  http_server.hpp
components/idf_includes/: CMakeLists.txt
components/idf_includes/include/: idf_c_includes.hpp
components/microros_sync/: CMakeLists.txt  microros_sync.cpp
components/microros_sync/include/: microros_sync.hpp
components/shelfbot_camera/: CMakeLists.txt  shelfbot_camera.c  shelfbot_camera.h
components/shelfbot_timestamp/: CMakeLists.txt  shelfbot_timestamp.cpp
components/shelfbot_timestamp/include/: shelfbot_timestamp.hpp
components/sntp_sync/: CMakeLists.txt  sntp_sync.cpp
components/sntp_sync/include/: sntp_sync.hpp
components/state_machine/: CMakeLists.txt  state_machine.cpp
components/state_machine/include/: state_machine.hpp  state_machine_lifecycle.hpp
components/wifi_manager/: CMakeLists.txt  network_manager.cpp  sntp_sync.cpp  wifi_manager.cpp
components/wifi_manager/include/: network_manager.hpp  sntp_sync.hpp  wifi_manager.hpp
main/: CMakeLists.txt  Kconfig.projbuild  controller.c  controller.h  main.c  main.cpp  microros_sync_c.cpp  microros_sync_c.h  network_manager.c  network_manager.h
