idf_component_register(
    SRCS
        "main.cpp"
    INCLUDE_DIRS "."
    REQUIRES
        idf_includes
        esp32-camera
        esp_system
        freertos
        nvs_flash
        esp_wifi
        esp_event
        esp_timer
        esp_psram
        wifi_manager
        microros_sync
        micro_ros_espidf_component
        http_server
        camera_control
        state_machine
        firmware_version
)
